fix header layout on collapse

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -21,7 +21,7 @@ body {
         black;
 }
 
-a.navbar-brand {
+ a.navbar-brand {
     text-align: left !important;
 }
 
@@ -29,20 +29,21 @@ a span.brand-by {
     font-size: 0.3em;
 }
 
+
 a span.brand-founder {
     display: block;
     font-size: .3em;
-}
+} 
 
 a {
     text-decoration: none;
     color: unset;
 }
 
-#navbarSupportedContent {
+/* #navbarSupportedContent {
     max-width: max-content;
     margin-right: 1em;
-}
+} */
 
 @media only screen and (max-width: 575px) {
     .navbar-brand {
@@ -64,6 +65,6 @@ a {
 
     footer .btn {
         font-size: 2vw;
-    }
+    } 
 
   }
